[gd_scene load_steps=81 format=2]

[ext_resource path="res://files/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://files/MainScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/images/backgrounds/sky.png" type="Texture" id=3]
[ext_resource path="res://assets/images/backgrounds/sky_night.png" type="Texture" id=4]
[ext_resource path="res://assets/images/backgrounds/town.png" type="Texture" id=5]
[ext_resource path="res://assets/images/buildings/mine.png" type="Texture" id=6]
[ext_resource path="res://assets/images/buildings/bridge.png" type="Texture" id=7]
[ext_resource path="res://assets/images/buildings/house.png" type="Texture" id=8]
[ext_resource path="res://assets/images/buildings/farm.png" type="Texture" id=9]
[ext_resource path="res://assets/images/buildings/sawmill.png" type="Texture" id=10]
[ext_resource path="res://assets/images/buildings/city_hall.png" type="Texture" id=11]
[ext_resource path="res://src/Clickable_Sprite.gd" type="Script" id=12]
[ext_resource path="res://assets/images/gui/exclamation.png" type="Texture" id=13]
[ext_resource path="res://assets/images/buildings/forge_2.png" type="Texture" id=14]
[ext_resource path="res://assets/images/buildings/tavern.png" type="Texture" id=15]
[ext_resource path="res://assets/images/buildings/market.png" type="Texture" id=16]
[ext_resource path="res://icon.png" type="Texture" id=17]
[ext_resource path="res://assets/images/buildings/gate.png" type="Texture" id=18]
[ext_resource path="res://assets/images/buildings/gate_hl.png" type="Texture" id=19]
[ext_resource path="res://assets/images/gui/universal/mspanel.png" type="Texture" id=20]
[ext_resource path="res://assets/images/gui/universal/msstash1.png" type="Texture" id=21]
[ext_resource path="res://assets/images/gui/universal/msstash2.png" type="Texture" id=22]
[ext_resource path="res://assets/images/gui/universal/msworkers1.png" type="Texture" id=23]
[ext_resource path="res://assets/images/gui/universal/msworkers2.png" type="Texture" id=24]
[ext_resource path="res://assets/images/gui/universal/msheroes1.png" type="Texture" id=25]
[ext_resource path="res://assets/images/gui/universal/msheroes2.png" type="Texture" id=26]
[ext_resource path="res://assets/images/gui/universal/msoptions1.png" type="Texture" id=27]
[ext_resource path="res://assets/images/gui/universal/msoptions2.png" type="Texture" id=28]
[ext_resource path="res://assets/images/iconsitems/Food.png" type="Texture" id=29]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=30]
[ext_resource path="res://assets/images/gui/timepanel.png" type="Texture" id=31]
[ext_resource path="res://files/buttons/main screen/speedstop0.png" type="Texture" id=32]
[ext_resource path="res://files/buttons/main screen/speedstop2.png" type="Texture" id=33]
[ext_resource path="res://files/buttons/main screen/speedstop1.png" type="Texture" id=34]
[ext_resource path="res://files/buttons/main screen/speednorm0.png" type="Texture" id=35]
[ext_resource path="res://files/buttons/main screen/speednorm2.png" type="Texture" id=36]
[ext_resource path="res://files/buttons/main screen/speednorm1.png" type="Texture" id=37]
[ext_resource path="res://files/buttons/main screen/speedfast0.png" type="Texture" id=38]
[ext_resource path="res://files/buttons/main screen/speedfast2.png" type="Texture" id=39]
[ext_resource path="res://files/buttons/main screen/speedfast1.png" type="Texture" id=40]
[ext_resource path="res://assets/images/gui/timesphere.png" type="Texture" id=41]
[ext_resource path="res://assets/images/gui/goblin.png" type="Texture" id=42]
[ext_resource path="res://src/TaskWorkerWindow.tscn" type="PackedScene" id=43]
[ext_resource path="res://assets/images/gui/taskmenu/workerpanel.png" type="Texture" id=44]
[ext_resource path="res://files/SlavePanel.gd" type="Script" id=45]
[ext_resource path="res://assets/images/gui/buildings/workericon.png" type="Texture" id=46]
[ext_resource path="res://assets/images/gui/buildings/workerline.png" type="Texture" id=47]
[ext_resource path="res://assets/images/gui/buildings/remove.png" type="Texture" id=48]
[ext_resource path="res://assets/images/gui/buildings/removehl.png" type="Texture" id=49]
[ext_resource path="res://assets/images/gui/buildings/use.png" type="Texture" id=50]
[ext_resource path="res://assets/images/gui/buildings/usehl.png" type="Texture" id=51]
[ext_resource path="res://assets/images/gui/buildings/activetask.png" type="Texture" id=52]
[ext_resource path="res://assets/images/gui/taskmenu/energyicon.png" type="Texture" id=53]
[ext_resource path="res://assets/images/gui/goblinicon.png" type="Texture" id=54]
[ext_resource path="res://assets/images/gui/taskmenu/jobgui.png" type="Texture" id=55]
[ext_resource path="res://assets/images/gui/universal/progressbar2.png" type="Texture" id=56]
[ext_resource path="res://assets/images/gui/universal/progressbar.png" type="Texture" id=57]
[ext_resource path="res://assets/images/gui/text scene/textbutton.png" type="Texture" id=58]
[ext_resource path="res://assets/images/gui/text scene/textbuttonpressed.png" type="Texture" id=59]
[ext_resource path="res://assets/images/gui/text scene/textbuttonhl.png" type="Texture" id=60]
[ext_resource path="res://assets/images/gui/taskmenu/timeicon.png" type="Texture" id=61]
[ext_resource path="res://src/TaskList.tscn" type="PackedScene" id=62]
[ext_resource path="res://files/Blacksmith/Blacksmith.tscn" type="PackedScene" id=63]
[ext_resource path="res://files/Blacksmith/TownHall.tscn" type="PackedScene" id=64]
[ext_resource path="res://files/Blacksmith/SlaveMarket.tscn" type="PackedScene" id=65]
[ext_resource path="res://files/Inventory.tscn" type="PackedScene" id=66]
[ext_resource path="res://files/HeroGuild.tscn" type="PackedScene" id=67]
[ext_resource path="res://src/HeroList.tscn" type="PackedScene" id=68]
[ext_resource path="res://src/ExploreScreen.tscn" type="PackedScene" id=69]
[ext_resource path="res://src/MenuPanel.tscn" type="PackedScene" id=70]
[ext_resource path="res://files/SFX/black.png" type="Texture" id=71]
[ext_resource path="res://Roundo-Medium.otf" type="DynamicFontData" id=72]
[ext_resource path="res://assets/images/gui/buildings/button.png" type="Texture" id=73]
[ext_resource path="res://assets/images/gui/buildings/buttonpress.png" type="Texture" id=74]
[ext_resource path="res://assets/images/gui/buildings/buttonhl.png" type="Texture" id=75]
[ext_resource path="res://src/Tutorial.tscn" type="PackedScene" id=76]
[ext_resource path="res://assets/fonts/RoundoShadow40.font" type="BitmapFont" id=77]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 56 )
region_rect = Rect2( 0, 0, 368, 31 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 57 )
region_rect = Rect2( 0, 0, 382, 39 )

[sub_resource type="DynamicFont" id=3]
size = 100
use_filter = true
font_data = ExtResource( 72 )

[node name="MainScreen" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 960.02, 538.517 )
scale = Vector2( 1.00002, 0.997191 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="NightSky" type="TextureRect" parent="."]
modulate = Color( 0.664909, 0.656204, 0.714844, 0 )
margin_left = 440.0
margin_right = 1920.0
margin_bottom = 394.0
texture = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="mine" type="TextureRect" parent="Background"]
margin_left = 90.0
margin_top = 405.0
margin_right = 348.0
margin_bottom = 663.0
texture = ExtResource( 6 )

[node name="bridge" type="TextureRect" parent="Background"]
margin_left = 1670.0
margin_top = 386.0
margin_right = 1923.0
margin_bottom = 604.0
texture = ExtResource( 7 )

[node name="house" type="TextureRect" parent="Background"]
margin_left = 1041.0
margin_top = 391.0
margin_right = 1203.0
margin_bottom = 499.0
texture = ExtResource( 8 )

[node name="farm" type="TextureRect" parent="Background"]
margin_left = 1119.0
margin_top = 455.0
margin_right = 1554.0
margin_bottom = 658.0
texture = ExtResource( 9 )

[node name="lumbermill" type="TextureRect" parent="Background"]
margin_left = 451.0
margin_top = 769.0
margin_right = 938.0
margin_bottom = 1079.0
texture = ExtResource( 10 )

[node name="TownHallNode" type="TextureButton" parent="."]
margin_left = 638.0
margin_top = 216.0
margin_right = 1090.0
margin_bottom = 573.0
texture_normal = ExtResource( 11 )
stretch_mode = 4
script = ExtResource( 12 )
charname = "erika"
inside_node_name = "TownHall"
is_char = false

[node name="QuestActive" type="TextureRect" parent="TownHallNode"]
margin_left = 272.0
margin_top = 18.0
margin_right = 406.0
margin_bottom = 141.0
texture = ExtResource( 13 )

[node name="BlacksmithNode" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 562.0
margin_top = 406.0
margin_right = 875.0
margin_bottom = 752.0
texture_normal = ExtResource( 14 )
stretch_mode = 4
script = ExtResource( 12 )
charname = "ember"
inside_node_name = "blacksmith"
is_char = false

[node name="QuestActive" type="TextureRect" parent="BlacksmithNode"]
margin_left = 201.0
margin_top = 43.0
margin_right = 326.0
margin_bottom = 165.0
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="TavernNode" type="TextureButton" parent="."]
margin_left = 1407.0
margin_top = 642.0
margin_right = 1858.0
margin_bottom = 963.0
texture_normal = ExtResource( 15 )
stretch_mode = 4

[node name="WorkBuildNode" type="TextureButton" parent="."]
margin_left = 225.0
margin_top = 493.0
margin_right = 540.0
margin_bottom = 916.0
texture_normal = ExtResource( 16 )
stretch_mode = 4
script = ExtResource( 12 )
charname = "flak"
inside_node_name = "SlaveMarket"
is_char = false

[node name="QuestActive" type="TextureRect" parent="WorkBuildNode"]
margin_left = 174.0
margin_top = -42.0
margin_right = 299.0
margin_bottom = 80.0
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="HeroBuildNode" type="TextureButton" parent="."]
visible = false
margin_left = 1074.0
margin_top = 311.0
margin_right = 1270.0
margin_bottom = 490.0
texture_normal = ExtResource( 17 )
expand = true

[node name="Gate" type="TextureButton" parent="."]
margin_left = 1570.0
margin_top = 519.0
margin_right = 1764.0
margin_bottom = 682.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )

[node name="testbutton" type="Button" parent="."]
visible = false
margin_left = 1018.0
margin_top = 885.0
margin_right = 1192.0
margin_bottom = 1042.0

[node name="ControlPanel" type="TextureRect" parent="."]
margin_left = 111.0
margin_top = 970.0
margin_right = 607.0
margin_bottom = 1080.0
texture = ExtResource( 20 )

[node name="Inventory" type="TextureButton" parent="ControlPanel"]
margin_left = 31.0
margin_top = 24.0
margin_right = 108.0
margin_bottom = 101.0
hint_tooltip = "INVENTORY"
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )

[node name="Slavelist" type="TextureButton" parent="ControlPanel"]
margin_left = 151.0
margin_top = 25.0
margin_right = 228.0
margin_bottom = 102.0
hint_tooltip = "WORKERLIST"
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )

[node name="Herolist" type="TextureButton" parent="ControlPanel"]
margin_left = 269.0
margin_top = 24.0
margin_right = 346.0
margin_bottom = 101.0
hint_tooltip = "HEROLIST"
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )

[node name="Options" type="TextureButton" parent="ControlPanel"]
margin_left = 388.0
margin_top = 24.0
margin_right = 465.0
margin_bottom = 101.0
hint_tooltip = "OPTIONMENU"
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 28 )

[node name="Gold" type="Label" parent="ControlPanel"]
margin_left = 1661.0
margin_top = -934.0
margin_right = 1713.0
margin_bottom = -910.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Gold"
align = 2

[node name="Food" type="Label" parent="ControlPanel"]
margin_left = 1655.0
margin_top = -882.0
margin_right = 1714.0
margin_bottom = -858.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Food"
align = 2

[node name="foodicon" type="TextureRect" parent="ControlPanel"]
margin_left = 1724.0
margin_top = -909.0
margin_right = 1798.0
margin_bottom = -837.0
hint_tooltip = "FOODDESCRIPT"
texture = ExtResource( 29 )
expand = true
stretch_mode = 6

[node name="goldicon" type="TextureRect" parent="ControlPanel"]
margin_left = 1709.0
margin_top = -979.0
margin_right = 1814.0
margin_bottom = -884.0
hint_tooltip = "MONEYDESCRIPT"
texture = ExtResource( 30 )
expand = true
stretch_mode = 6

[node name="TimeNode" type="TextureRect" parent="."]
margin_right = 234.0
margin_bottom = 125.0
texture = ExtResource( 31 )

[node name="Date" type="Label" parent="TimeNode"]
margin_left = 11.0
margin_top = 9.0
margin_right = 156.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.597656, 0.428544, 0.0280151, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Date"

[node name="0speed" type="TextureButton" parent="TimeNode"]
margin_left = 152.0
margin_top = -1.0
margin_right = 205.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 34 )

[node name="1speed" type="TextureButton" parent="TimeNode"]
margin_left = 203.0
margin_top = -1.0
margin_right = 256.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 36 )
texture_hover = ExtResource( 37 )

[node name="2speed" type="TextureButton" parent="TimeNode"]
margin_left = 254.0
margin_top = -1.0
margin_right = 304.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 40 )

[node name="HidePanel" type="Panel" parent="TimeNode"]
visible = false
self_modulate = Color( 1, 1, 1, 0.77898 )
margin_left = -1.0
margin_right = 312.0
margin_bottom = 158.0

[node name="TimeWheel" type="TextureRect" parent="TimeNode"]
show_behind_parent = true
margin_left = 2.0
margin_top = -153.0
margin_right = 309.0
margin_bottom = 154.0
rect_rotation = 360.0
rect_pivot_offset = Vector2( 153.5, 153.5 )
mouse_filter = 2
texture = ExtResource( 41 )

[node name="TaskCounter" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 15.0
margin_top = 182.0
margin_right = 348.0
margin_bottom = 310.0

[node name="Button" type="TextureButton" parent="TaskCounter"]
visible = false
margin_right = 333.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
expand = true

[node name="Icon" type="TextureRect" parent="TaskCounter/Button"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 42 )
expand = true

[node name="Progress" type="ProgressBar" parent="TaskCounter/Button"]
margin_left = 52.0
margin_top = 9.0
margin_right = 281.0
margin_bottom = 33.0
mouse_filter = 2
step = 1.0
percent_visible = false

[node name="SelectWorker" parent="." instance=ExtResource( 43 )]
visible = false

[node name="SlavePanel" type="TextureRect" parent="." groups=[
"pauseprocess",
]]
editor/display_folded = true
visible = false
margin_left = 40.0
margin_top = 100.0
margin_right = 689.0
margin_bottom = 888.0
texture = ExtResource( 44 )
script = ExtResource( 45 )

[node name="ScrollContainer" type="ScrollContainer" parent="SlavePanel"]
margin_left = 70.0
margin_top = 110.0
margin_right = 588.0
margin_bottom = 680.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="SlavePanel/ScrollContainer"]
custom_constants/separation = 12

[node name="Button" type="TextureRect" parent="SlavePanel/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 46 )
expand = true
stretch_mode = 6

[node name="Line" type="TextureRect" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
show_behind_parent = true
margin_left = 93.0
margin_top = 11.0
margin_right = 518.0
margin_bottom = 89.0
texture = ExtResource( 47 )

[node name="Name" type="Label" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
margin_left = 109.0
margin_top = 19.0
margin_right = 243.0
margin_bottom = 43.0

[node name="Remove" type="TextureButton" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
margin_left = 446.0
margin_top = 17.0
margin_right = 512.0
margin_bottom = 81.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Expel"
texture_normal = ExtResource( 48 )
texture_pressed = ExtResource( 49 )
texture_hover = ExtResource( 49 )

[node name="Use" type="TextureButton" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
margin_left = 380.0
margin_top = 17.0
margin_right = 446.0
margin_bottom = 81.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 50 )
texture_pressed = ExtResource( 51 )
texture_hover = ExtResource( 51 )

[node name="Task" type="TextureRect" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
margin_left = 317.0
margin_top = 23.0
margin_right = 369.0
margin_bottom = 76.0
texture = ExtResource( 52 )

[node name="EnIcon" type="TextureRect" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
margin_left = 109.0
margin_top = 50.0
margin_right = 142.0
margin_bottom = 86.0
texture = ExtResource( 53 )
expand = true
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
margin_left = 7.0
margin_top = 6.0
margin_right = 91.0
margin_bottom = 90.0
texture = ExtResource( 54 )
expand = true
stretch_mode = 6

[node name="Energy" type="Label" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
margin_left = 146.0
margin_top = 56.0
margin_right = 312.0
margin_bottom = 80.0

[node name="Button" type="TextureButton" parent="SlavePanel/ScrollContainer/VBoxContainer/Button"]
margin_right = 380.0
margin_bottom = 100.0

[node name="TaskPanel" type="TextureRect" parent="SlavePanel"]
visible = false
margin_left = 677.0
margin_top = 4.0
margin_right = 1326.0
margin_bottom = 792.0
texture = ExtResource( 55 )

[node name="ToolImage" type="TextureRect" parent="SlavePanel/TaskPanel"]
margin_left = 464.0
margin_top = 466.0
margin_right = 564.0
margin_bottom = 566.0
rect_min_size = Vector2( 100, 100 )
expand = true

[node name="Label2" type="Label" parent="SlavePanel/TaskPanel/ToolImage"]
margin_left = -10.0
margin_top = -60.0
margin_right = 102.0
margin_bottom = -36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Used Tool"

[node name="TaskDescript" type="RichTextLabel" parent="SlavePanel/TaskPanel"]
margin_left = 57.0
margin_top = 96.0
margin_right = 584.0
margin_bottom = 181.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true

[node name="TaskProgress" type="ProgressBar" parent="SlavePanel/TaskPanel"]
margin_left = 44.0
margin_top = 606.0
margin_right = 584.0
margin_bottom = 645.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 90.0
percent_visible = false

[node name="Label" type="Label" parent="SlavePanel/TaskPanel/TaskProgress"]
margin_left = 113.0
margin_top = -38.0
margin_right = 455.0
margin_bottom = -14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Progress until next"
align = 1

[node name="StopButton" type="TextureButton" parent="SlavePanel/TaskPanel"]
margin_left = 249.0
margin_top = 679.0
margin_right = 387.0
margin_bottom = 747.0
texture_normal = ExtResource( 58 )
texture_pressed = ExtResource( 59 )
texture_hover = ExtResource( 60 )

[node name="Label" type="Label" parent="SlavePanel/TaskPanel/StopButton"]
margin_left = 11.0
margin_top = 20.0
margin_right = 126.0
margin_bottom = 44.0
text = "Stop"
align = 1

[node name="EnergyIcon" type="TextureRect" parent="SlavePanel/TaskPanel"]
margin_left = 384.0
margin_top = 232.0
margin_right = 437.0
margin_bottom = 287.0
texture = ExtResource( 53 )

[node name="EnergyCost" type="Label" parent="SlavePanel/TaskPanel/EnergyIcon"]
margin_left = -220.0
margin_top = 14.0
margin_right = -74.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"

[node name="TimeIcon" type="TextureRect" parent="SlavePanel/TaskPanel"]
margin_left = 104.0
margin_top = 234.0
margin_right = 157.0
margin_bottom = 287.0
texture = ExtResource( 61 )

[node name="TimeCost" type="Label" parent="SlavePanel/TaskPanel/TimeIcon"]
margin_left = 340.0
margin_top = 12.0
margin_right = 486.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"

[node name="Head" type="Label" parent="SlavePanel/TaskPanel"]
margin_left = 147.0
margin_top = 33.0
margin_right = 477.0
margin_bottom = 84.0
align = 1

[node name="TaskList" parent="SlavePanel" instance=ExtResource( 62 )]
visible = false
margin_left = 657.0
margin_top = 1.0
margin_right = 1306.0
margin_bottom = 789.0

[node name="LogPanel" type="Panel" parent="."]
editor/display_folded = true
visible = false
self_modulate = Color( 0.0234375, 1, 0.267578, 0.364627 )
margin_left = 1332.0
margin_top = 633.0
margin_right = 1910.0
margin_bottom = 1056.0

[node name="RichTextLabel" type="RichTextLabel" parent="LogPanel"]
margin_left = 10.0
margin_top = 17.0
margin_right = 566.0
margin_bottom = 410.0
bbcode_enabled = true
scroll_following = true

[node name="blacksmith" parent="." groups=[
"pauseprocess",
] instance=ExtResource( 63 )]
visible = false

[node name="TownHall" parent="." groups=[
"pauseprocess",
] instance=ExtResource( 64 )]
visible = false

[node name="SlaveMarket" parent="." groups=[
"pauseprocess",
] instance=ExtResource( 65 )]
visible = false

[node name="Inventory" parent="." groups=[
"pauseprocess",
] instance=ExtResource( 66 )]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 689.0
margin_bottom = 828.0
theme = ExtResource( 1 )

[node name="HeroGuild" parent="." groups=[
"pauseprocess",
] instance=ExtResource( 67 )]
visible = false

[node name="HeroList" parent="." instance=ExtResource( 68 )]
visible = false

[node name="ExploreScreen" parent="." groups=[
"pauseprocess",
] instance=ExtResource( 69 )]
visible = false

[node name="MenuPanel" parent="." groups=[
"pauseprocess",
] instance=ExtResource( 70 )]
visible = false
margin_left = 780.0
margin_top = 320.0
margin_right = 1099.0
margin_bottom = 714.0

[node name="BlackScreen" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 71 )
expand = true

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1079.0

[node name="RichTextLabel" type="Label" parent="GameOverPanel"]
margin_left = 582.0
margin_top = 207.0
margin_right = 1296.0
margin_bottom = 454.0
custom_fonts/font = SubResource( 3 )
text = "Game Over"
align = 1
valign = 1

[node name="ExitButton" type="TextureButton" parent="GameOverPanel"]
margin_left = 806.0
margin_top = 587.0
margin_right = 1099.0
margin_bottom = 666.0
texture_normal = ExtResource( 73 )
texture_pressed = ExtResource( 74 )
texture_hover = ExtResource( 75 )

[node name="Label" type="Label" parent="GameOverPanel/ExitButton"]
margin_left = 21.0
margin_top = 23.0
margin_right = 265.0
margin_bottom = 47.0
text = "Return to Main Menu"

[node name="TutorialNode" parent="." instance=ExtResource( 76 )]
visible = false
margin_left = 1222.0
margin_top = 45.0
margin_right = 1738.0
margin_bottom = 211.0

[node name="SystemMessageLabel" type="RichTextLabel" parent="."]
margin_left = 29.0
margin_top = 919.0
margin_right = 1901.0
margin_bottom = 958.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 77 )
custom_colors/default_color = Color( 1, 0.890625, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="VotePanel" type="Panel" parent="."]
visible = false
margin_left = 642.0
margin_top = 310.0
margin_right = 1249.0
margin_bottom = 686.0

[node name="RichTextLabel" type="RichTextLabel" parent="VotePanel"]
margin_left = 33.0
margin_top = 27.0
margin_right = 584.0
margin_bottom = 205.0
bbcode_enabled = true
bbcode_text = "Thank you for playing Displaced Demo. Please take a few minutes to vote so we can know how to make this game better for you!"
text = "Thank you for playing Displaced Demo. Please take a few minutes to vote so we can know how to make this game better for you!"

[node name="Links" type="Button" parent="VotePanel"]
margin_left = 169.0
margin_top = 200.0
margin_right = 428.0
margin_bottom = 244.0
text = "Open Vote Link"

[node name="Close" type="Button" parent="VotePanel"]
margin_left = 169.0
margin_top = 280.0
margin_right = 428.0
margin_bottom = 324.0
text = "Close"

[node name="Tween" type="Tween" parent="."]

